@@ -9,7 +9,7 @@ Version 2.16
 
 * The following bugs are resolved with this release:
 
-  13526, 13529
+  13526, 13528, 13529
 
 
 Version 2.15
